Cleans distance clumn

--- a/kaggle_data.ipynb
+++ b/kaggle_data.ipynb
@@ -66,6 +66,149 @@
    ]
   },
   {
+   "source": [
+    "## Alright, let's get down to it\n",
+    "\n",
+    "What's wrong with the diverted column"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#it doesn't exist!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['DIVERTED_CLEANED'] = df['DIVERTED'].apply(lambda x: True if x in ('T','True',1) else False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "False    1189958\n",
+       "True        1847\n",
+       "Name: DIVERTED_CLEANED, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 22
+    }
+   ],
+   "source": [
+    "df['DIVERTED_CLEANED'].value_counts()"
+   ]
+  },
+  {
+   "source": [
+    "Alright good stuff we've cleaned the diverted column! \n",
+    "\n",
+    "## Question 4 - what's wrong with the distance column. fix it! "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "337 miles     10113\n",
+       "370 miles      6851\n",
+       "236 miles      5726\n",
+       "328 miles      5721\n",
+       "224 miles      5509\n",
+       "              ...  \n",
+       "1997 miles        1\n",
+       "2045 miles        1\n",
+       "18 miles          1\n",
+       "2874 miles        1\n",
+       "1800 miles        1\n",
+       "Name: DISTANCE, Length: 1706, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 23
+    }
+   ],
+   "source": [
+    "df['DISTANCE'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['DISTANCE_CLEANED'] = df['DISTANCE'].apply(lambda x: x.split()[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   TRANSACTIONID  FLIGHTDATE AIRLINECODE                     AIRLINENAME  \\\n",
+       "0       54548800    20020101          WN      Southwest Airlines Co.: WN   \n",
+       "1       55872300    20020101          CO  Continental Air Lines Inc.: CO   \n",
+       "\n",
+       "  TAILNUM  FLIGHTNUM ORIGINAIRPORTCODE  \\\n",
+       "0  N103@@       1425               ABQ   \n",
+       "1  N83872        150               ABQ   \n",
+       "\n",
+       "                                    ORIGAIRPORTNAME ORIGINCITYNAME  \\\n",
+       "0  AlbuquerqueNM: Albuquerque International Sunport    Albuquerque   \n",
+       "1  AlbuquerqueNM: Albuquerque International Sunport    Albuquerque   \n",
+       "\n",
+       "  ORIGINSTATE  ... CRSARRTIME ARRTIME ARRDELAY CRSELAPSEDTIME  \\\n",
+       "0          NM  ...       1655  1652.0     -3.0           90.0   \n",
+       "1          NM  ...       1426  1435.0      9.0          116.0   \n",
+       "\n",
+       "  ACTUALELAPSEDTIME CANCELLED  DIVERTED   DISTANCE  DIVERTED_CLEANED  \\\n",
+       "0              87.0         F     False  580 miles             False   \n",
+       "1             119.0     False         F  744 miles             False   \n",
+       "\n",
+       "   DISTANCE_CLEANED  \n",
+       "0               580  \n",
+       "1               744  \n",
+       "\n",
+       "[2 rows x 33 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>TRANSACTIONID</th>\n      <th>FLIGHTDATE</th>\n      <th>AIRLINECODE</th>\n      <th>AIRLINENAME</th>\n      <th>TAILNUM</th>\n      <th>FLIGHTNUM</th>\n      <th>ORIGINAIRPORTCODE</th>\n      <th>ORIGAIRPORTNAME</th>\n      <th>ORIGINCITYNAME</th>\n      <th>ORIGINSTATE</th>\n      <th>...</th>\n      <th>CRSARRTIME</th>\n      <th>ARRTIME</th>\n      <th>ARRDELAY</th>\n      <th>CRSELAPSEDTIME</th>\n      <th>ACTUALELAPSEDTIME</th>\n      <th>CANCELLED</th>\n      <th>DIVERTED</th>\n      <th>DISTANCE</th>\n      <th>DIVERTED_CLEANED</th>\n      <th>DISTANCE_CLEANED</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>54548800</td>\n      <td>20020101</td>\n      <td>WN</td>\n      <td>Southwest Airlines Co.: WN</td>\n      <td>N103@@</td>\n      <td>1425</td>\n      <td>ABQ</td>\n      <td>AlbuquerqueNM: Albuquerque International Sunport</td>\n      <td>Albuquerque</td>\n      <td>NM</td>\n      <td>...</td>\n      <td>1655</td>\n      <td>1652.0</td>\n      <td>-3.0</td>\n      <td>90.0</td>\n      <td>87.0</td>\n      <td>F</td>\n      <td>False</td>\n      <td>580 miles</td>\n      <td>False</td>\n      <td>580</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>55872300</td>\n      <td>20020101</td>\n      <td>CO</td>\n      <td>Continental Air Lines Inc.: CO</td>\n      <td>N83872</td>\n      <td>150</td>\n      <td>ABQ</td>\n      <td>AlbuquerqueNM: Albuquerque International Sunport</td>\n      <td>Albuquerque</td>\n      <td>NM</td>\n      <td>...</td>\n      <td>1426</td>\n      <td>1435.0</td>\n      <td>9.0</td>\n      <td>116.0</td>\n      <td>119.0</td>\n      <td>False</td>\n      <td>F</td>\n      <td>744 miles</td>\n      <td>False</td>\n      <td>744</td>\n    </tr>\n  </tbody>\n</table>\n<p>2 rows × 33 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 40
+    }
+   ],
+   "source": [
+    "df.head(2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
