Converts date to right format

--- a/kaggle_data.ipynb
+++ b/kaggle_data.ipynb
@@ -209,6 +209,86 @@
    ]
   },
   {
+   "source": [
+    "## Create a fnction that uses datetime to parse flight data to a python datatimeobject"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "df['new_date_format'] = pd.to_datetime(df['FLIGHTDATE'].astype(str), format='%Y%m%d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   TRANSACTIONID  FLIGHTDATE AIRLINECODE                     AIRLINENAME  \\\n",
+       "0       54548800    20020101          WN      Southwest Airlines Co.: WN   \n",
+       "1       55872300    20020101          CO  Continental Air Lines Inc.: CO   \n",
+       "2       54388800    20020101          WN      Southwest Airlines Co.: WN   \n",
+       "3       54486500    20020101          WN      Southwest Airlines Co.: WN   \n",
+       "4       55878700    20020103          CO  Continental Air Lines Inc.: CO   \n",
+       "\n",
+       "  TAILNUM  FLIGHTNUM ORIGINAIRPORTCODE  \\\n",
+       "0  N103@@       1425               ABQ   \n",
+       "1  N83872        150               ABQ   \n",
+       "2  N334@@        249               ABQ   \n",
+       "3  N699@@        902               ABQ   \n",
+       "4  N58606        234               ABQ   \n",
+       "\n",
+       "                                    ORIGAIRPORTNAME ORIGINCITYNAME  \\\n",
+       "0  AlbuquerqueNM: Albuquerque International Sunport    Albuquerque   \n",
+       "1  AlbuquerqueNM: Albuquerque International Sunport    Albuquerque   \n",
+       "2  AlbuquerqueNM: Albuquerque International Sunport    Albuquerque   \n",
+       "3  AlbuquerqueNM: Albuquerque International Sunport    Albuquerque   \n",
+       "4  AlbuquerqueNM: Albuquerque International Sunport    Albuquerque   \n",
+       "\n",
+       "  ORIGINSTATE  ... ARRTIME ARRDELAY CRSELAPSEDTIME ACTUALELAPSEDTIME  \\\n",
+       "0          NM  ...  1652.0     -3.0           90.0              87.0   \n",
+       "1          NM  ...  1435.0      9.0          116.0             119.0   \n",
+       "2          NM  ...  1620.0     80.0          105.0             102.0   \n",
+       "3          NM  ...  1948.0     -2.0           85.0              83.0   \n",
+       "4          NM  ...  1747.0     -3.0          115.0             114.0   \n",
+       "\n",
+       "  CANCELLED DIVERTED   DISTANCE  DIVERTED_CLEANED  DISTANCE_CLEANED  \\\n",
+       "0         F    False  580 miles             False               580   \n",
+       "1     False        F  744 miles             False               744   \n",
+       "2         F    False  718 miles             False               718   \n",
+       "3         0        0  487 miles             False               487   \n",
+       "4         F    False  744 miles             False               744   \n",
+       "\n",
+       "   new_date_format  \n",
+       "0       2002-01-01  \n",
+       "1       2002-01-01  \n",
+       "2       2002-01-01  \n",
+       "3       2002-01-01  \n",
+       "4       2002-01-03  \n",
+       "\n",
+       "[5 rows x 34 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>TRANSACTIONID</th>\n      <th>FLIGHTDATE</th>\n      <th>AIRLINECODE</th>\n      <th>AIRLINENAME</th>\n      <th>TAILNUM</th>\n      <th>FLIGHTNUM</th>\n      <th>ORIGINAIRPORTCODE</th>\n      <th>ORIGAIRPORTNAME</th>\n      <th>ORIGINCITYNAME</th>\n      <th>ORIGINSTATE</th>\n      <th>...</th>\n      <th>ARRTIME</th>\n      <th>ARRDELAY</th>\n      <th>CRSELAPSEDTIME</th>\n      <th>ACTUALELAPSEDTIME</th>\n      <th>CANCELLED</th>\n      <th>DIVERTED</th>\n      <th>DISTANCE</th>\n      <th>DIVERTED_CLEANED</th>\n      <th>DISTANCE_CLEANED</th>\n      <th>new_date_format</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>54548800</td>\n      <td>20020101</td>\n      <td>WN</td>\n      <td>Southwest Airlines Co.: WN</td>\n      <td>N103@@</td>\n      <td>1425</td>\n      <td>ABQ</td>\n      <td>AlbuquerqueNM: Albuquerque International Sunport</td>\n      <td>Albuquerque</td>\n      <td>NM</td>\n      <td>...</td>\n      <td>1652.0</td>\n      <td>-3.0</td>\n      <td>90.0</td>\n      <td>87.0</td>\n      <td>F</td>\n      <td>False</td>\n      <td>580 miles</td>\n      <td>False</td>\n      <td>580</td>\n      <td>2002-01-01</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>55872300</td>\n      <td>20020101</td>\n      <td>CO</td>\n      <td>Continental Air Lines Inc.: CO</td>\n      <td>N83872</td>\n      <td>150</td>\n      <td>ABQ</td>\n      <td>AlbuquerqueNM: Albuquerque International Sunport</td>\n      <td>Albuquerque</td>\n      <td>NM</td>\n      <td>...</td>\n      <td>1435.0</td>\n      <td>9.0</td>\n      <td>116.0</td>\n      <td>119.0</td>\n      <td>False</td>\n      <td>F</td>\n      <td>744 miles</td>\n      <td>False</td>\n      <td>744</td>\n      <td>2002-01-01</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>54388800</td>\n      <td>20020101</td>\n      <td>WN</td>\n      <td>Southwest Airlines Co.: WN</td>\n      <td>N334@@</td>\n      <td>249</td>\n      <td>ABQ</td>\n      <td>AlbuquerqueNM: Albuquerque International Sunport</td>\n      <td>Albuquerque</td>\n      <td>NM</td>\n      <td>...</td>\n      <td>1620.0</td>\n      <td>80.0</td>\n      <td>105.0</td>\n      <td>102.0</td>\n      <td>F</td>\n      <td>False</td>\n      <td>718 miles</td>\n      <td>False</td>\n      <td>718</td>\n      <td>2002-01-01</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>54486500</td>\n      <td>20020101</td>\n      <td>WN</td>\n      <td>Southwest Airlines Co.: WN</td>\n      <td>N699@@</td>\n      <td>902</td>\n      <td>ABQ</td>\n      <td>AlbuquerqueNM: Albuquerque International Sunport</td>\n      <td>Albuquerque</td>\n      <td>NM</td>\n      <td>...</td>\n      <td>1948.0</td>\n      <td>-2.0</td>\n      <td>85.0</td>\n      <td>83.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>487 miles</td>\n      <td>False</td>\n      <td>487</td>\n      <td>2002-01-01</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>55878700</td>\n      <td>20020103</td>\n      <td>CO</td>\n      <td>Continental Air Lines Inc.: CO</td>\n      <td>N58606</td>\n      <td>234</td>\n      <td>ABQ</td>\n      <td>AlbuquerqueNM: Albuquerque International Sunport</td>\n      <td>Albuquerque</td>\n      <td>NM</td>\n      <td>...</td>\n      <td>1747.0</td>\n      <td>-3.0</td>\n      <td>115.0</td>\n      <td>114.0</td>\n      <td>F</td>\n      <td>False</td>\n      <td>744 miles</td>\n      <td>False</td>\n      <td>744</td>\n      <td>2002-01-03</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 34 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 62
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
