Sorts the dataframe in terms of distance, ascending

--- a/kaggle_data.ipynb
+++ b/kaggle_data.ipynb
@@ -289,6 +289,141 @@
    ]
   },
   {
+   "source": [
+    "## use the duplicated() method to count how many exact duplicates there are in the dataset"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True     1191804\n",
+       "False          1\n",
+       "dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 77
+    }
+   ],
+   "source": [
+    "df.duplicated(subset = 'DESTAIRPORTNAME', keep = False).value_counts() # There are 0!"
+   ]
+  },
+  {
+   "source": [
+    "## Sort the dataframe"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "        TRANSACTIONID  FLIGHTDATE AIRLINECODE                 AIRLINENAME  \\\n",
+       "667522      109437100    20100106          MQ               Envoy Air: MQ   \n",
+       "665677      118325600    20110517          MQ               Envoy Air: MQ   \n",
+       "883406       70500900    20040520          MQ               Envoy Air: MQ   \n",
+       "620945      132186500    20130914          MQ               Envoy Air: MQ   \n",
+       "665808      118290300    20110513          MQ               Envoy Air: MQ   \n",
+       "...               ...         ...         ...                         ...   \n",
+       "732701      140628700    20150531          HA  Hawaiian Airlines Inc.: HA   \n",
+       "733375       15193200    19940913          DL    Delta Air Lines Inc.: DL   \n",
+       "166565      105699400    20090506          HA  Hawaiian Airlines Inc.: HA   \n",
+       "733373       13032500    19940529          DL    Delta Air Lines Inc.: DL   \n",
+       "733581        3405400    19920918          AA  American Airlines Inc.: AA   \n",
+       "\n",
+       "       TAILNUM  FLIGHTNUM ORIGINAIRPORTCODE  \\\n",
+       "667522  N811MQ       2727               DFW   \n",
+       "665677  N670MQ       3331               DFW   \n",
+       "883406  N847MQ       3625               DFW   \n",
+       "620945  N643MQ       3646               DFW   \n",
+       "665808  N693MQ       2877               DFW   \n",
+       "...        ...        ...               ...   \n",
+       "732701  N493HA        265               OGG   \n",
+       "733375     NaN       1852               OGG   \n",
+       "166565  N486HA        114               HNL   \n",
+       "733373     NaN       1852               OGG   \n",
+       "733581     NaN          8               OGG   \n",
+       "\n",
+       "                                          ORIGAIRPORTNAME     ORIGINCITYNAME  \\\n",
+       "667522  Dallas/Fort WorthTX: Dallas/Fort Worth Interna...  Dallas/Fort Worth   \n",
+       "665677  Dallas/Fort WorthTX: Dallas/Fort Worth Interna...  Dallas/Fort Worth   \n",
+       "883406  Dallas/Fort WorthTX: Dallas/Fort Worth Interna...  Dallas/Fort Worth   \n",
+       "620945  Dallas/Fort WorthTX: Dallas/Fort Worth Interna...  Dallas/Fort Worth   \n",
+       "665808  Dallas/Fort WorthTX: Dallas/Fort Worth Interna...  Dallas/Fort Worth   \n",
+       "...                                                   ...                ...   \n",
+       "732701                         KahuluiHI: Kahului Airport            Kahului   \n",
+       "733375                         KahuluiHI: Kahului Airport            Kahului   \n",
+       "166565                 HonoluluHI: Honolulu International           Honolulu   \n",
+       "733373                         KahuluiHI: Kahului Airport            Kahului   \n",
+       "733581                         KahuluiHI: Kahului Airport            Kahului   \n",
+       "\n",
+       "       ORIGINSTATE  ... ARRTIME ARRDELAY CRSELAPSEDTIME ACTUALELAPSEDTIME  \\\n",
+       "667522          TX  ...  1215.0     15.0          145.0             141.0   \n",
+       "665677          TX  ...  1158.0     -2.0          150.0             154.0   \n",
+       "883406          TX  ...  1611.0     -1.0          149.0             151.0   \n",
+       "620945          TX  ...  1837.0     22.0          150.0             160.0   \n",
+       "665808          TX  ...  1514.0     29.0          150.0             183.0   \n",
+       "...            ...  ...     ...      ...            ...               ...   \n",
+       "732701          HI  ...  1935.0      2.0           35.0              36.0   \n",
+       "733375          HI  ...  2019.0      0.0           39.0              39.0   \n",
+       "166565          HI  ...   717.0     -1.0           36.0              38.0   \n",
+       "733373          HI  ...  2020.0      0.0           40.0              38.0   \n",
+       "733581          HI  ...  1555.0      8.0           42.0              43.0   \n",
+       "\n",
+       "       CANCELLED DIVERTED   DISTANCE  DIVERTED_CLEANED  DISTANCE_CLEANED  \\\n",
+       "667522         0        0  999 miles             False               999   \n",
+       "665677     False        F  999 miles             False               999   \n",
+       "883406         0        0  999 miles             False               999   \n",
+       "620945         0        0  999 miles             False               999   \n",
+       "665808         0        0  999 miles             False               999   \n",
+       "...          ...      ...        ...               ...               ...   \n",
+       "732701     False        F  100 miles             False               100   \n",
+       "733375     False        F  100 miles             False               100   \n",
+       "166565     False    False  100 miles             False               100   \n",
+       "733373     False        F  100 miles             False               100   \n",
+       "733581         0        0  100 miles             False               100   \n",
+       "\n",
+       "        new_date_format  \n",
+       "667522       2010-01-06  \n",
+       "665677       2011-05-17  \n",
+       "883406       2004-05-20  \n",
+       "620945       2013-09-14  \n",
+       "665808       2011-05-13  \n",
+       "...                 ...  \n",
+       "732701       2015-05-31  \n",
+       "733375       1994-09-13  \n",
+       "166565       2009-05-06  \n",
+       "733373       1994-05-29  \n",
+       "733581       1992-09-18  \n",
+       "\n",
+       "[1191805 rows x 34 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>TRANSACTIONID</th>\n      <th>FLIGHTDATE</th>\n      <th>AIRLINECODE</th>\n      <th>AIRLINENAME</th>\n      <th>TAILNUM</th>\n      <th>FLIGHTNUM</th>\n      <th>ORIGINAIRPORTCODE</th>\n      <th>ORIGAIRPORTNAME</th>\n      <th>ORIGINCITYNAME</th>\n      <th>ORIGINSTATE</th>\n      <th>...</th>\n      <th>ARRTIME</th>\n      <th>ARRDELAY</th>\n      <th>CRSELAPSEDTIME</th>\n      <th>ACTUALELAPSEDTIME</th>\n      <th>CANCELLED</th>\n      <th>DIVERTED</th>\n      <th>DISTANCE</th>\n      <th>DIVERTED_CLEANED</th>\n      <th>DISTANCE_CLEANED</th>\n      <th>new_date_format</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>667522</th>\n      <td>109437100</td>\n      <td>20100106</td>\n      <td>MQ</td>\n      <td>Envoy Air: MQ</td>\n      <td>N811MQ</td>\n      <td>2727</td>\n      <td>DFW</td>\n      <td>Dallas/Fort WorthTX: Dallas/Fort Worth Interna...</td>\n      <td>Dallas/Fort Worth</td>\n      <td>TX</td>\n      <td>...</td>\n      <td>1215.0</td>\n      <td>15.0</td>\n      <td>145.0</td>\n      <td>141.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>999 miles</td>\n      <td>False</td>\n      <td>999</td>\n      <td>2010-01-06</td>\n    </tr>\n    <tr>\n      <th>665677</th>\n      <td>118325600</td>\n      <td>20110517</td>\n      <td>MQ</td>\n      <td>Envoy Air: MQ</td>\n      <td>N670MQ</td>\n      <td>3331</td>\n      <td>DFW</td>\n      <td>Dallas/Fort WorthTX: Dallas/Fort Worth Interna...</td>\n      <td>Dallas/Fort Worth</td>\n      <td>TX</td>\n      <td>...</td>\n      <td>1158.0</td>\n      <td>-2.0</td>\n      <td>150.0</td>\n      <td>154.0</td>\n      <td>False</td>\n      <td>F</td>\n      <td>999 miles</td>\n      <td>False</td>\n      <td>999</td>\n      <td>2011-05-17</td>\n    </tr>\n    <tr>\n      <th>883406</th>\n      <td>70500900</td>\n      <td>20040520</td>\n      <td>MQ</td>\n      <td>Envoy Air: MQ</td>\n      <td>N847MQ</td>\n      <td>3625</td>\n      <td>DFW</td>\n      <td>Dallas/Fort WorthTX: Dallas/Fort Worth Interna...</td>\n      <td>Dallas/Fort Worth</td>\n      <td>TX</td>\n      <td>...</td>\n      <td>1611.0</td>\n      <td>-1.0</td>\n      <td>149.0</td>\n      <td>151.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>999 miles</td>\n      <td>False</td>\n      <td>999</td>\n      <td>2004-05-20</td>\n    </tr>\n    <tr>\n      <th>620945</th>\n      <td>132186500</td>\n      <td>20130914</td>\n      <td>MQ</td>\n      <td>Envoy Air: MQ</td>\n      <td>N643MQ</td>\n      <td>3646</td>\n      <td>DFW</td>\n      <td>Dallas/Fort WorthTX: Dallas/Fort Worth Interna...</td>\n      <td>Dallas/Fort Worth</td>\n      <td>TX</td>\n      <td>...</td>\n      <td>1837.0</td>\n      <td>22.0</td>\n      <td>150.0</td>\n      <td>160.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>999 miles</td>\n      <td>False</td>\n      <td>999</td>\n      <td>2013-09-14</td>\n    </tr>\n    <tr>\n      <th>665808</th>\n      <td>118290300</td>\n      <td>20110513</td>\n      <td>MQ</td>\n      <td>Envoy Air: MQ</td>\n      <td>N693MQ</td>\n      <td>2877</td>\n      <td>DFW</td>\n      <td>Dallas/Fort WorthTX: Dallas/Fort Worth Interna...</td>\n      <td>Dallas/Fort Worth</td>\n      <td>TX</td>\n      <td>...</td>\n      <td>1514.0</td>\n      <td>29.0</td>\n      <td>150.0</td>\n      <td>183.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>999 miles</td>\n      <td>False</td>\n      <td>999</td>\n      <td>2011-05-13</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>732701</th>\n      <td>140628700</td>\n      <td>20150531</td>\n      <td>HA</td>\n      <td>Hawaiian Airlines Inc.: HA</td>\n      <td>N493HA</td>\n      <td>265</td>\n      <td>OGG</td>\n      <td>KahuluiHI: Kahului Airport</td>\n      <td>Kahului</td>\n      <td>HI</td>\n      <td>...</td>\n      <td>1935.0</td>\n      <td>2.0</td>\n      <td>35.0</td>\n      <td>36.0</td>\n      <td>False</td>\n      <td>F</td>\n      <td>100 miles</td>\n      <td>False</td>\n      <td>100</td>\n      <td>2015-05-31</td>\n    </tr>\n    <tr>\n      <th>733375</th>\n      <td>15193200</td>\n      <td>19940913</td>\n      <td>DL</td>\n      <td>Delta Air Lines Inc.: DL</td>\n      <td>NaN</td>\n      <td>1852</td>\n      <td>OGG</td>\n      <td>KahuluiHI: Kahului Airport</td>\n      <td>Kahului</td>\n      <td>HI</td>\n      <td>...</td>\n      <td>2019.0</td>\n      <td>0.0</td>\n      <td>39.0</td>\n      <td>39.0</td>\n      <td>False</td>\n      <td>F</td>\n      <td>100 miles</td>\n      <td>False</td>\n      <td>100</td>\n      <td>1994-09-13</td>\n    </tr>\n    <tr>\n      <th>166565</th>\n      <td>105699400</td>\n      <td>20090506</td>\n      <td>HA</td>\n      <td>Hawaiian Airlines Inc.: HA</td>\n      <td>N486HA</td>\n      <td>114</td>\n      <td>HNL</td>\n      <td>HonoluluHI: Honolulu International</td>\n      <td>Honolulu</td>\n      <td>HI</td>\n      <td>...</td>\n      <td>717.0</td>\n      <td>-1.0</td>\n      <td>36.0</td>\n      <td>38.0</td>\n      <td>False</td>\n      <td>False</td>\n      <td>100 miles</td>\n      <td>False</td>\n      <td>100</td>\n      <td>2009-05-06</td>\n    </tr>\n    <tr>\n      <th>733373</th>\n      <td>13032500</td>\n      <td>19940529</td>\n      <td>DL</td>\n      <td>Delta Air Lines Inc.: DL</td>\n      <td>NaN</td>\n      <td>1852</td>\n      <td>OGG</td>\n      <td>KahuluiHI: Kahului Airport</td>\n      <td>Kahului</td>\n      <td>HI</td>\n      <td>...</td>\n      <td>2020.0</td>\n      <td>0.0</td>\n      <td>40.0</td>\n      <td>38.0</td>\n      <td>False</td>\n      <td>F</td>\n      <td>100 miles</td>\n      <td>False</td>\n      <td>100</td>\n      <td>1994-05-29</td>\n    </tr>\n    <tr>\n      <th>733581</th>\n      <td>3405400</td>\n      <td>19920918</td>\n      <td>AA</td>\n      <td>American Airlines Inc.: AA</td>\n      <td>NaN</td>\n      <td>8</td>\n      <td>OGG</td>\n      <td>KahuluiHI: Kahului Airport</td>\n      <td>Kahului</td>\n      <td>HI</td>\n      <td>...</td>\n      <td>1555.0</td>\n      <td>8.0</td>\n      <td>42.0</td>\n      <td>43.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>100 miles</td>\n      <td>False</td>\n      <td>100</td>\n      <td>1992-09-18</td>\n    </tr>\n  </tbody>\n</table>\n<p>1191805 rows × 34 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 79
+    }
+   ],
+   "source": [
+    "df.sort_values(by = 'DISTANCE_CLEANED', ascending = False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
