--- a/kaggle_data.ipynb
+++ b/kaggle_data.ipynb
@@ -297,24 +297,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "True     1191804\n",
-       "False          1\n",
+       "False    1191590\n",
+       "True         215\n",
        "dtype: int64"
       ]
      },
      "metadata": {},
-     "execution_count": 77
+     "execution_count": 87
     }
    ],
    "source": [
-    "df.duplicated(subset = 'DESTAIRPORTNAME', keep = False).value_counts() # There are 0!"
+    "df.duplicated(subset=['DESTAIRPORTNAME', 'AIRLINECODE', 'FLIGHTDATE', 'CRSDEPTIME', 'DEPTIME', 'ARRTIME'], keep='first').value_counts() # There are 0!"
    ]
   },
   {
@@ -421,6 +421,138 @@
    ],
    "source": [
     "df.sort_values(by = 'DISTANCE_CLEANED', ascending = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "hi!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('hi!')"
+   ]
+  },
+  {
+   "source": [
+    "## look up how to use the unique method and check the tail numb column"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fake_df = df.drop_duplicates(subset=['DESTAIRPORTNAME', 'AIRLINECODE', 'FLIGHTDATE', 'CRSDEPTIME', 'DEPTIME', 'ARRTIME'], keep='first')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "         TRANSACTIONID  FLIGHTDATE AIRLINECODE  \\\n",
+       "0             54548800    20020101          WN   \n",
+       "1             55872300    20020101          CO   \n",
+       "2             54388800    20020101          WN   \n",
+       "3             54486500    20020101          WN   \n",
+       "4             55878700    20020103          CO   \n",
+       "...                ...         ...         ...   \n",
+       "1191800      126750200    20130106          EV   \n",
+       "1191801      127294500    20130106          DL   \n",
+       "1191802      127294900    20130106          DL   \n",
+       "1191803      126594900    20130106          EV   \n",
+       "1191804      126620300    20130106          EV   \n",
+       "\n",
+       "                            AIRLINENAME TAILNUM  FLIGHTNUM ORIGINAIRPORTCODE  \\\n",
+       "0            Southwest Airlines Co.: WN  N103@@       1425               ABQ   \n",
+       "1        Continental Air Lines Inc.: CO  N83872        150               ABQ   \n",
+       "2            Southwest Airlines Co.: WN  N334@@        249               ABQ   \n",
+       "3            Southwest Airlines Co.: WN  N699@@        902               ABQ   \n",
+       "4        Continental Air Lines Inc.: CO  N58606        234               ABQ   \n",
+       "...                                 ...     ...        ...               ...   \n",
+       "1191800    ExpressJet Airlines Inc.: EV  N683BR       5272               ATL   \n",
+       "1191801        Delta Air Lines Inc.: DL  N949DL       1711               ATL   \n",
+       "1191802        Delta Air Lines Inc.: DL  N907DE       1810               ATL   \n",
+       "1191803    ExpressJet Airlines Inc.: EV  N855AS       5208               ATL   \n",
+       "1191804    ExpressJet Airlines Inc.: EV  N138EV       5549               ATL   \n",
+       "\n",
+       "                                           ORIGAIRPORTNAME ORIGINCITYNAME  \\\n",
+       "0         AlbuquerqueNM: Albuquerque International Sunport    Albuquerque   \n",
+       "1         AlbuquerqueNM: Albuquerque International Sunport    Albuquerque   \n",
+       "2         AlbuquerqueNM: Albuquerque International Sunport    Albuquerque   \n",
+       "3         AlbuquerqueNM: Albuquerque International Sunport    Albuquerque   \n",
+       "4         AlbuquerqueNM: Albuquerque International Sunport    Albuquerque   \n",
+       "...                                                    ...            ...   \n",
+       "1191800  AtlantaGA: Hartsfield-Jackson Atlanta Internat...        Atlanta   \n",
+       "1191801  AtlantaGA: Hartsfield-Jackson Atlanta Internat...        Atlanta   \n",
+       "1191802  AtlantaGA: Hartsfield-Jackson Atlanta Internat...        Atlanta   \n",
+       "1191803  AtlantaGA: Hartsfield-Jackson Atlanta Internat...        Atlanta   \n",
+       "1191804  AtlantaGA: Hartsfield-Jackson Atlanta Internat...        Atlanta   \n",
+       "\n",
+       "        ORIGINSTATE  ... ARRTIME ARRDELAY CRSELAPSEDTIME ACTUALELAPSEDTIME  \\\n",
+       "0                NM  ...  1652.0     -3.0           90.0              87.0   \n",
+       "1                NM  ...  1435.0      9.0          116.0             119.0   \n",
+       "2                NM  ...  1620.0     80.0          105.0             102.0   \n",
+       "3                NM  ...  1948.0     -2.0           85.0              83.0   \n",
+       "4                NM  ...  1747.0     -3.0          115.0             114.0   \n",
+       "...             ...  ...     ...      ...            ...               ...   \n",
+       "1191800          GA  ...  1503.0    -20.0          146.0             135.0   \n",
+       "1191801          GA  ...  2317.0     -4.0          151.0             150.0   \n",
+       "1191802          GA  ...  1737.0    -13.0          153.0             140.0   \n",
+       "1191803          GA  ...  1655.0     -3.0          102.0             101.0   \n",
+       "1191804          GA  ...  1615.0      6.0           77.0              77.0   \n",
+       "\n",
+       "        CANCELLED DIVERTED   DISTANCE  DIVERTED_CLEANED  DISTANCE_CLEANED  \\\n",
+       "0               F    False  580 miles             False               580   \n",
+       "1           False        F  744 miles             False               744   \n",
+       "2               F    False  718 miles             False               718   \n",
+       "3               0        0  487 miles             False               487   \n",
+       "4               F    False  744 miles             False               744   \n",
+       "...           ...      ...        ...               ...               ...   \n",
+       "1191800         0        0  721 miles             False               721   \n",
+       "1191801     False        F  731 miles             False               731   \n",
+       "1191802         F    False  731 miles             False               731   \n",
+       "1191803     False        F  508 miles             False               508   \n",
+       "1191804     False    False  306 miles             False               306   \n",
+       "\n",
+       "         new_date_format  \n",
+       "0             2002-01-01  \n",
+       "1             2002-01-01  \n",
+       "2             2002-01-01  \n",
+       "3             2002-01-01  \n",
+       "4             2002-01-03  \n",
+       "...                  ...  \n",
+       "1191800       2013-01-06  \n",
+       "1191801       2013-01-06  \n",
+       "1191802       2013-01-06  \n",
+       "1191803       2013-01-06  \n",
+       "1191804       2013-01-06  \n",
+       "\n",
+       "[1191590 rows x 34 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>TRANSACTIONID</th>\n      <th>FLIGHTDATE</th>\n      <th>AIRLINECODE</th>\n      <th>AIRLINENAME</th>\n      <th>TAILNUM</th>\n      <th>FLIGHTNUM</th>\n      <th>ORIGINAIRPORTCODE</th>\n      <th>ORIGAIRPORTNAME</th>\n      <th>ORIGINCITYNAME</th>\n      <th>ORIGINSTATE</th>\n      <th>...</th>\n      <th>ARRTIME</th>\n      <th>ARRDELAY</th>\n      <th>CRSELAPSEDTIME</th>\n      <th>ACTUALELAPSEDTIME</th>\n      <th>CANCELLED</th>\n      <th>DIVERTED</th>\n      <th>DISTANCE</th>\n      <th>DIVERTED_CLEANED</th>\n      <th>DISTANCE_CLEANED</th>\n      <th>new_date_format</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>54548800</td>\n      <td>20020101</td>\n      <td>WN</td>\n      <td>Southwest Airlines Co.: WN</td>\n      <td>N103@@</td>\n      <td>1425</td>\n      <td>ABQ</td>\n      <td>AlbuquerqueNM: Albuquerque International Sunport</td>\n      <td>Albuquerque</td>\n      <td>NM</td>\n      <td>...</td>\n      <td>1652.0</td>\n      <td>-3.0</td>\n      <td>90.0</td>\n      <td>87.0</td>\n      <td>F</td>\n      <td>False</td>\n      <td>580 miles</td>\n      <td>False</td>\n      <td>580</td>\n      <td>2002-01-01</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>55872300</td>\n      <td>20020101</td>\n      <td>CO</td>\n      <td>Continental Air Lines Inc.: CO</td>\n      <td>N83872</td>\n      <td>150</td>\n      <td>ABQ</td>\n      <td>AlbuquerqueNM: Albuquerque International Sunport</td>\n      <td>Albuquerque</td>\n      <td>NM</td>\n      <td>...</td>\n      <td>1435.0</td>\n      <td>9.0</td>\n      <td>116.0</td>\n      <td>119.0</td>\n      <td>False</td>\n      <td>F</td>\n      <td>744 miles</td>\n      <td>False</td>\n      <td>744</td>\n      <td>2002-01-01</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>54388800</td>\n      <td>20020101</td>\n      <td>WN</td>\n      <td>Southwest Airlines Co.: WN</td>\n      <td>N334@@</td>\n      <td>249</td>\n      <td>ABQ</td>\n      <td>AlbuquerqueNM: Albuquerque International Sunport</td>\n      <td>Albuquerque</td>\n      <td>NM</td>\n      <td>...</td>\n      <td>1620.0</td>\n      <td>80.0</td>\n      <td>105.0</td>\n      <td>102.0</td>\n      <td>F</td>\n      <td>False</td>\n      <td>718 miles</td>\n      <td>False</td>\n      <td>718</td>\n      <td>2002-01-01</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>54486500</td>\n      <td>20020101</td>\n      <td>WN</td>\n      <td>Southwest Airlines Co.: WN</td>\n      <td>N699@@</td>\n      <td>902</td>\n      <td>ABQ</td>\n      <td>AlbuquerqueNM: Albuquerque International Sunport</td>\n      <td>Albuquerque</td>\n      <td>NM</td>\n      <td>...</td>\n      <td>1948.0</td>\n      <td>-2.0</td>\n      <td>85.0</td>\n      <td>83.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>487 miles</td>\n      <td>False</td>\n      <td>487</td>\n      <td>2002-01-01</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>55878700</td>\n      <td>20020103</td>\n      <td>CO</td>\n      <td>Continental Air Lines Inc.: CO</td>\n      <td>N58606</td>\n      <td>234</td>\n      <td>ABQ</td>\n      <td>AlbuquerqueNM: Albuquerque International Sunport</td>\n      <td>Albuquerque</td>\n      <td>NM</td>\n      <td>...</td>\n      <td>1747.0</td>\n      <td>-3.0</td>\n      <td>115.0</td>\n      <td>114.0</td>\n      <td>F</td>\n      <td>False</td>\n      <td>744 miles</td>\n      <td>False</td>\n      <td>744</td>\n      <td>2002-01-03</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1191800</th>\n      <td>126750200</td>\n      <td>20130106</td>\n      <td>EV</td>\n      <td>ExpressJet Airlines Inc.: EV</td>\n      <td>N683BR</td>\n      <td>5272</td>\n      <td>ATL</td>\n      <td>AtlantaGA: Hartsfield-Jackson Atlanta Internat...</td>\n      <td>Atlanta</td>\n      <td>GA</td>\n      <td>...</td>\n      <td>1503.0</td>\n      <td>-20.0</td>\n      <td>146.0</td>\n      <td>135.0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>721 miles</td>\n      <td>False</td>\n      <td>721</td>\n      <td>2013-01-06</td>\n    </tr>\n    <tr>\n      <th>1191801</th>\n      <td>127294500</td>\n      <td>20130106</td>\n      <td>DL</td>\n      <td>Delta Air Lines Inc.: DL</td>\n      <td>N949DL</td>\n      <td>1711</td>\n      <td>ATL</td>\n      <td>AtlantaGA: Hartsfield-Jackson Atlanta Internat...</td>\n      <td>Atlanta</td>\n      <td>GA</td>\n      <td>...</td>\n      <td>2317.0</td>\n      <td>-4.0</td>\n      <td>151.0</td>\n      <td>150.0</td>\n      <td>False</td>\n      <td>F</td>\n      <td>731 miles</td>\n      <td>False</td>\n      <td>731</td>\n      <td>2013-01-06</td>\n    </tr>\n    <tr>\n      <th>1191802</th>\n      <td>127294900</td>\n      <td>20130106</td>\n      <td>DL</td>\n      <td>Delta Air Lines Inc.: DL</td>\n      <td>N907DE</td>\n      <td>1810</td>\n      <td>ATL</td>\n      <td>AtlantaGA: Hartsfield-Jackson Atlanta Internat...</td>\n      <td>Atlanta</td>\n      <td>GA</td>\n      <td>...</td>\n      <td>1737.0</td>\n      <td>-13.0</td>\n      <td>153.0</td>\n      <td>140.0</td>\n      <td>F</td>\n      <td>False</td>\n      <td>731 miles</td>\n      <td>False</td>\n      <td>731</td>\n      <td>2013-01-06</td>\n    </tr>\n    <tr>\n      <th>1191803</th>\n      <td>126594900</td>\n      <td>20130106</td>\n      <td>EV</td>\n      <td>ExpressJet Airlines Inc.: EV</td>\n      <td>N855AS</td>\n      <td>5208</td>\n      <td>ATL</td>\n      <td>AtlantaGA: Hartsfield-Jackson Atlanta Internat...</td>\n      <td>Atlanta</td>\n      <td>GA</td>\n      <td>...</td>\n      <td>1655.0</td>\n      <td>-3.0</td>\n      <td>102.0</td>\n      <td>101.0</td>\n      <td>False</td>\n      <td>F</td>\n      <td>508 miles</td>\n      <td>False</td>\n      <td>508</td>\n      <td>2013-01-06</td>\n    </tr>\n    <tr>\n      <th>1191804</th>\n      <td>126620300</td>\n      <td>20130106</td>\n      <td>EV</td>\n      <td>ExpressJet Airlines Inc.: EV</td>\n      <td>N138EV</td>\n      <td>5549</td>\n      <td>ATL</td>\n      <td>AtlantaGA: Hartsfield-Jackson Atlanta Internat...</td>\n      <td>Atlanta</td>\n      <td>GA</td>\n      <td>...</td>\n      <td>1615.0</td>\n      <td>6.0</td>\n      <td>77.0</td>\n      <td>77.0</td>\n      <td>False</td>\n      <td>False</td>\n      <td>306 miles</td>\n      <td>False</td>\n      <td>306</td>\n      <td>2013-01-06</td>\n    </tr>\n  </tbody>\n</table>\n<p>1191590 rows × 34 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 93
+    }
+   ],
+   "source": [
+    "fake_df"
    ]
   },
   {
