adds final questions

--- a/kaggle_data.ipynb
+++ b/kaggle_data.ipynb
@@ -557,6 +557,158 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "13569    '144DA\n",
+       "10564    -N037M\n",
+       "12810    -N047M\n",
+       "6264     -N107D\n",
+       "2961     -N108D\n",
+       "          ...  \n",
+       "7240     n409ca\n",
+       "7297     n466ca\n",
+       "7233     n815ca\n",
+       "7211     n816ca\n",
+       "470         NaN\n",
+       "Length: 13870, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 97
+    }
+   ],
+   "source": [
+    "pd.Series(df['TAILNUM'].unique()).sort_values(ascending = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "False    637289\n",
+       "0        347545\n",
+       "F        178357\n",
+       "True      16370\n",
+       "1          8160\n",
+       "T          4084\n",
+       "Name: CANCELLED, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 98
+    }
+   ],
+   "source": [
+    "df['CANCELLED'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['CANCELLED_cleaned'] = df['CANCELLED'].replace(['0', 'F', '1', 'T', 'True'], [False, False, True, True, True])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "False    1163191\n",
+       "True       28614\n",
+       "Name: CANCELLED_cleaned, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 126
+    }
+   ],
+   "source": [
+    "df['CANCELLED_cleaned'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['TRANSACTIONID']= df['TRANSACTIONID'].astype('category')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "TRANSACTIONID              category\n",
+       "FLIGHTDATE                    int64\n",
+       "AIRLINECODE                  object\n",
+       "AIRLINENAME                  object\n",
+       "TAILNUM                      object\n",
+       "FLIGHTNUM                     int64\n",
+       "ORIGINAIRPORTCODE            object\n",
+       "ORIGAIRPORTNAME              object\n",
+       "ORIGINCITYNAME               object\n",
+       "ORIGINSTATE                  object\n",
+       "ORIGINSTATENAME              object\n",
+       "DESTAIRPORTCODE              object\n",
+       "DESTAIRPORTNAME              object\n",
+       "DESTCITYNAME                 object\n",
+       "DESTSTATE                    object\n",
+       "DESTSTATENAME                object\n",
+       "CRSDEPTIME                    int64\n",
+       "DEPTIME                     float64\n",
+       "DEPDELAY                    float64\n",
+       "TAXIOUT                     float64\n",
+       "WHEELSOFF                   float64\n",
+       "WHEELSON                    float64\n",
+       "TAXIIN                      float64\n",
+       "CRSARRTIME                    int64\n",
+       "ARRTIME                     float64\n",
+       "ARRDELAY                    float64\n",
+       "CRSELAPSEDTIME              float64\n",
+       "ACTUALELAPSEDTIME           float64\n",
+       "CANCELLED                    object\n",
+       "DIVERTED                     object\n",
+       "DISTANCE                     object\n",
+       "DIVERTED_CLEANED               bool\n",
+       "DISTANCE_CLEANED             object\n",
+       "new_date_format      datetime64[ns]\n",
+       "CANCELLED_cleaned            object\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 132
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
